--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -101,7 +101,7 @@ nav ul {
 }
 
 nav li {
-  margin-left: 2em;
+  margin-left: 5em;
 }
 
 .link {
@@ -109,6 +109,7 @@ nav li {
   color: var(--white);
   font-weight: 700;
   padding: 0.25em 0;
+  font-size: 1.25rem;
 }
 
 .link:hover,
