--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -243,6 +243,7 @@ input {
 .link-btn {
   text-align: center;
   text-decoration: none;
+  min-width: 30%;
 }
 
 /* Other Pages (About, Error, Loading...)*/
@@ -317,4 +318,21 @@ input {
 
 .return > * {
   flex-basis: 15%;
+}
+
+@media (max-width: 670px) {
+  .cocktail-content {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .cocktail-info {
+    margin: 2rem auto 0;
+    width: 100%;
+    min-width: 70%;
+  }
+
+  .link-btn {
+    min-width: 40%;
+  }
 }
